deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivery-app
  labels:
    name: delivery-app
    environment: production
